--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,270 +1,280 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
-  --primary-color: #1F0047;
-  --primary-color-hover: #410d85;
-  --background: #ffffff;
-  --background-two: #f7f7f7;
-  --background-three: #ECECF0;
-  --secondary-color: #fba819;
-  --tertiary-one: #555;
-  --tertiary-two: #111;
-  --secondary-inverse: #000;
-  --input-background: #fff;
-  --text-inactive: #8585AC;
-  /* --input-background-two: #252525; */
-  --font-family: "Poppins", sans-serif;
-  --shadow: #cccccc50;
-  --border-one: #77777750;
-  --placeholder: #999;
-  --stroke: #E5E5EF;
+	--primary-color: #1f0047;
+	--primary-color-hover: #410d85;
+	--background: #ffffff;
+	--background-two: #f7f7f7;
+	--background-three: #ececf0;
+	--secondary-color: #fba819;
+	--tertiary-one: #555;
+	--tertiary-two: #111;
+	--secondary-inverse: #000;
+	--input-background: #fff;
+	--text-inactive: #8585ac;
+	/* --input-background-two: #252525; */
+	--font-family: "Poppins", sans-serif;
+	--shadow: #cccccc50;
+	--border-one: #77777750;
+	--placeholder: #999;
+	--stroke: #e5e5ef;
+}
+
+/* Hide arrows in WebKit browsers */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+/* Hide arrows in Firefox */
+input[type="number"] {
+	-moz-appearance: textfield;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  background-color: #EFF4F9;
-  font-family: var(--font-family);
+	max-width: 100vw;
+	overflow-x: hidden;
+	background-color: #eff4f9;
+	font-family: var(--font-family);
 }
 
 h1 {
-  font-family: var(--font-family);
-  font-weight: 600;
-  font-size: 52px;
+	font-family: var(--font-family);
+	font-weight: 600;
+	font-size: 52px;
 }
 h2 {
-  font-family: var(--font-family);
-  font-size: 40px;
-  font-weight: 600;
+	font-family: var(--font-family);
+	font-size: 40px;
+	font-weight: 600;
 }
 h3 {
-  font-family: var(--font-family);
-  font-size: 32px;
-  font-weight: 500;
+	font-family: var(--font-family);
+	font-size: 32px;
+	font-weight: 500;
 }
 h4 {
-  font-family: var(--font-family);
-  font-size: 24px;
-  font-weight: 500;
+	font-family: var(--font-family);
+	font-size: 24px;
+	font-weight: 500;
 }
 h5 {
-  font-family: var(--font-family);
-  font-size: 20px;
-  font-weight: 600;
+	font-family: var(--font-family);
+	font-size: 20px;
+	font-weight: 600;
 }
 h6 {
-  font-family: var(--font-family);
-  font-size: 16px;
-  color: #555555;
-  font-weight: 400;
+	font-family: var(--font-family);
+	font-size: 16px;
+	color: #555555;
+	font-weight: 400;
 }
 p {
-  font-family: var(--font-family);
-  font-size: 14px;
-  color: #777;
-  font-weight: 400;
+	font-family: var(--font-family);
+	font-size: 14px;
+	color: #777;
+	font-weight: 400;
 }
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 
-
-input{
-  height: 40px;
-  padding: 12px;
-  border-radius: 8px;
-  font-size: 14px;
-  border: 1px solid var(--stroke);
-  font-family: var(--font-family);
-  width: calc(100% - 20px);
-  /* outline: none; */
+input {
+	height: 40px;
+	padding: 12px;
+	border-radius: 8px;
+	font-size: 14px;
+	border: 1px solid var(--stroke);
+	font-family: var(--font-family);
+	width: calc(100% - 20px);
+	/* outline: none; */
 }
-textarea{
-  height: 120px;
-  padding: 12px;
-  border-radius: 8px;
-  font-size: 14px;
-  border: 1px solid var(--stroke);
-  font-family: var(--font-family);
-  width: calc(100% - 20px);
-  /* outline: none; */
+textarea {
+	height: 120px;
+	padding: 12px;
+	border-radius: 8px;
+	font-size: 14px;
+	border: 1px solid var(--stroke);
+	font-family: var(--font-family);
+	width: calc(100% - 20px);
+	/* outline: none; */
 }
 input::placeholder {
-  color: #bfbfbf;
+	color: #bfbfbf;
 }
-select{
-  height: 40px;
-  padding: 8px;
-  border-radius: 8px;
-  font-size: 14px;
-  border: 1px solid var(--stroke);
-  font-family: var(--font-family);
-  width: calc(100% - 20px);
-  /* outline: none; */
-}
-
-label{
-  width: 100%;
-  font-family: var(--font-family);
-  font-size: 16px;
-  font-weight: 400;
-  margin-top: 20px;
+select {
+	height: 40px;
+	padding: 8px;
+	border-radius: 8px;
+	font-size: 14px;
+	border: 1px solid var(--stroke);
+	font-family: var(--font-family);
+	width: calc(100% - 20px);
+	/* outline: none; */
 }
 
-button[disabled]{
-  background-color: grey;
-  pointer-events: auto! important;
-  cursor: not-allowed! important;
+label {
+	width: 100%;
+	font-family: var(--font-family);
+	font-size: 16px;
+	font-weight: 400;
+	margin-top: 20px;
 }
 
-button[disabled]:hover{
-  background-color: grey;
+button[disabled] {
+	background-color: grey;
+	pointer-events: auto !important;
+	cursor: not-allowed !important;
 }
 
-button{
-  height: 50px;
-  color: #fff;
-  background-color: var(--primary-color);
-  padding: 0 30px;
-  min-width: 150px;
-  font-family: var(--font-family);
-  border-radius: 50px;
-  font-size: 16px;
-  font-weight: 400;
-  cursor: pointer;
-  border: 0;
-}
-button:hover{
-  background: var(--primary-color-hover);
-}
-button:active{
-  background: var(--primary-color);
-}
-.btnTwo{
-  height: 50px;
-  color: #fff;
-  background-color: #999;
-  padding: 0 30px;
-  min-width: 150px;
-  font-family: var(--font-family);
-  border-radius: 8px;
-  font-size: 16px;
-  font-weight: 400;
-  cursor: pointer;
-  border: 0;
-}
-.btn{
-  height: 50px;
-  color: var(--primary-color);
-  background-color: var(--background);
-  padding: 0 30px;
-  min-width: 150px;
-  font-family: var(--font-family);
-  border-radius: 8px;
-  font-size: 16px;
-  font-weight: 400;
-  cursor: pointer;
-  border: 0;
+button[disabled]:hover {
+	background-color: grey;
 }
 
-li{
-  font-family: var(--font-family);
-  list-style: none;
-  font-size: 16px;
+button {
+	height: 50px;
+	color: #fff;
+	background-color: var(--primary-color);
+	padding: 0 30px;
+	min-width: 150px;
+	font-family: var(--font-family);
+	border-radius: 50px;
+	font-size: 16px;
+	font-weight: 400;
+	cursor: pointer;
+	border: 0;
+}
+button:hover {
+	background: var(--primary-color-hover);
+}
+button:active {
+	background: var(--primary-color);
+}
+.btnTwo {
+	height: 50px;
+	color: #fff;
+	background-color: #999;
+	padding: 0 30px;
+	min-width: 150px;
+	font-family: var(--font-family);
+	border-radius: 8px;
+	font-size: 16px;
+	font-weight: 400;
+	cursor: pointer;
+	border: 0;
+}
+.btn {
+	height: 50px;
+	color: var(--primary-color);
+	background-color: var(--background);
+	padding: 0 30px;
+	min-width: 150px;
+	font-family: var(--font-family);
+	border-radius: 8px;
+	font-size: 16px;
+	font-weight: 400;
+	cursor: pointer;
+	border: 0;
 }
 
-p{
-  width: 100%;
-  font-family: var(--font-family);
-  font-size: 14px;
+li {
+	font-family: var(--font-family);
+	list-style: none;
+	font-size: 16px;
 }
-p span{
-  color: var(--primary-color);
-  font-weight: 600;
-  cursor: pointer;
-}
-table{
-  font-size: 14px;
-  text-align: left;
-  border-collapse: collapse;
-  margin: 24px 0;
-  overflow-x: scroll;
-  overflow: hidden;
-  width: 100%;
-}
-tr{
-  margin-bottom: 50px;
-}
-tbody tr:hover{
-  cursor: pointer;
-  background-color: #17173f20;
-}
-tbody{
-  border: 1px solid #ddd;
 
+p {
+	width: 100%;
+	font-family: var(--font-family);
+	font-size: 14px;
 }
-thead{
-  background-color: #F0F7FD;
-  border-top-right-radius: 16px;
-  border-top-left-radius: 16px;
-  border: 1px solid #C7D0E799;
+p span {
+	color: var(--primary-color);
+	font-weight: 600;
+	cursor: pointer;
 }
-th{
-  border-bottom: 1px solid #ddd;
-  font-weight: 600;
-  color: #333;
-  padding: 6px 0 ;
-  padding-right: 20px;
-  padding-left: 16px;
+table {
+	font-size: 14px;
+	text-align: left;
+	border-collapse: collapse;
+	margin: 24px 0;
+	overflow-x: scroll;
+	overflow: hidden;
+	width: 100%;
 }
-td{
-  border-bottom: 1px solid #ddd;
-  font-weight: 400;
-  padding: 12px 0 ;
-  padding-right: 20px;
-  padding-left: 16px;
+tr {
+	margin-bottom: 50px;
 }
-#table{
-  overflow-x: scroll;
+tbody tr:hover {
+	cursor: pointer;
+	background-color: #17173f20;
 }
-.error{
-  width: 100%;
-  color: #ff0000;
-  text-align: center;
-  padding: 10px;
-  background-color: #ff000020;
+tbody {
+	border: 1px solid #ddd;
+}
+thead {
+	background-color: #f0f7fd;
+	border-top-right-radius: 16px;
+	border-top-left-radius: 16px;
+	border: 1px solid #c7d0e799;
+}
+th {
+	border-bottom: 1px solid #ddd;
+	font-weight: 600;
+	color: #333;
+	padding: 6px 0;
+	padding-right: 20px;
+	padding-left: 16px;
+}
+td {
+	border-bottom: 1px solid #ddd;
+	font-weight: 400;
+	padding: 12px 0;
+	padding-right: 20px;
+	padding-left: 16px;
+}
+#table {
+	overflow-x: scroll;
+}
+.error {
+	width: 100%;
+	color: #ff0000;
+	text-align: center;
+	padding: 10px;
+	background-color: #ff000020;
 }
 ::-webkit-scrollbar {
-  width: 4px;
-  height: 6px;
+	width: 4px;
+	height: 6px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+	background: #f1f1f1;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #fba81980; 
+	background: #fba81980;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #bb790080; 
+	background: #bb790080;
 }
-.Toastify__toast-theme--light{
-  background-color:pink
+.Toastify__toast-theme--light {
+	background-color: pink;
 }
 
-@media only screen and (max-width: 768px){
-  h3{
-    font-size: 24px;
-  }
+@media only screen and (max-width: 768px) {
+	h3 {
+		font-size: 24px;
+	}
 }
