--- a/src/styles/components/sidebar.module.css
+++ b/src/styles/components/sidebar.module.css
@@ -1,13 +1,14 @@
 .desktopSidebar {
 	margin: 0%;
 	padding: 0%;
-	width: 300px;
+	width: 250px;
 	height: 100vh;
+	position: relative;
 	background-color: #fff;
 	box-shadow: 0px 0px 25px var(--shadow);
 }
 .desktopSidebar .container {
-	padding: 50px 25px;
+	padding: 30px 15px;
 }
 .desktopSidebar .container .logo {
 	margin: 0 0 40px 0;
@@ -51,19 +52,21 @@
 .bottom {
 	position: absolute;
 	bottom: 0;
+
 	padding: 20px 0;
 }
 .bottom .profile {
 	display: flex;
 	align-items: center;
-	padding: 12px 5px;
-	border-radius: 12px;
-	background: #f7f7f7;
+
+	/* border-radius: 12px; */
+	background: #eaeaea;
 	margin-bottom: 16px;
 }
 .bottom .profile img {
 	width: 50px;
 	height: 50px;
+	padding: 1px 3px;
 	object-fit: cover;
 	background: #7b88ab60;
 	border-radius: 50%;
@@ -89,4 +92,11 @@
 .bottom .exit .icon {
 	color: #ff0000;
 	margin-right: 12px;
+}
+
+.LinkItem {
+	font-size: 12px;
+}
+.info h6 {
+	font-size: 12px;
 }
