--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -140,14 +140,13 @@ button[disabled]:hover {
 }
 
 button {
-	/* height: 50px; */
+	height: 40px;
 	color: #fff;
 	background-color: var(--primary-color);
-	padding: 0 30px;
 	min-width: 150px;
 	font-family: var(--font-family);
 	border-radius: 50px;
-	padding: 7px 0;
+	padding: 2px 0;
 	font-size: 14px;
 	font-weight: 400;
 	cursor: pointer;
